# google_keep_be

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/config/: __init__.py  router_configs.py
app/constants/: __init__.py  app_literals.py
app/controller/: __init__.py  image_controller.py  label_controller.py  notes_controller.py
app/database/: __init__.py  label_database.py  notes_database.py
app/model/: __init__.py
app/model/request/: image_request_model.py  label_request_model.py  notes_request_model.py
app/model/response/: common_response_model.py
app/mongo/: __init__.py  base_document.py  notes_document.py
app/router/: __init__.py  image_router.py  labels_router.py  notes_router.py
app/utils/: __init__.py  logger.py
creds/: firebase.json
